--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <p>
         soy ignacio y voy a estar aqui contigo
-        talvez no me quieraA PERO YO SI
+        talvez no me quieraA PERO YO SI, pero de a poco vamos a mejorar
+        daaaale
+        
     </p>
 </body>
 </html>
